fix: too long about us on mobile view

--- a/Home/src/components/CSS/About.module.css
+++ b/Home/src/components/CSS/About.module.css
@@ -136,7 +136,10 @@
     padding-right: 0;
     padding-left: 1rem;
     padding-bottom: 7rem;
+    height: 100vh;
+    overflow-y: scroll;
   }
+
 
   .videos {
     width: 90%;
@@ -160,6 +163,11 @@
     font-size: 1rem;
     padding-right: 3rem;
     line-height: 1.5rem;
+  }
+  .video{
+    margin-left: 0.6rem;
+    margin-inline: none;
+    width: 80%;
   }
 
   .about {
